# pastel.tv

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/database/: email.rs  mod.rs  tokens.rs  user.rs
api/src/middleware/: auth.rs
api/src/routes/: account.rs  mod.rs  router.rs
api/src/util/: auth.rs  consts.rs  db.rs  email.rs  errors.rs  mod.rs  password.rs
assets/: README.md  package.json
client/: README.md
client/web/: README.md  svelte.config.js  vite.config.ts
client/web/src/: app.css
client/web/src/lib/caller/: account.ts  apiRequest.ts
client/web/src/lib/components/apps/: AppIcon.svelte  Friend.svelte
client/web/src/lib/components/input/: BigSearch.svelte  EmailInput.svelte  PasswordInput.svelte
client/web/src/lib/context/: context.ts
client/web/src/lib/utils/: types.ts
client/web/src/routes/: +page.svelte
client/web/src/routes/app/: +layout.svelte
client/web/src/routes/app/launch/[appId]/: +page.ts
client/web/src/routes/app/login/: +page.svelte
lib/: README.md
lib/database/: Cargo.toml  README.md
lib/database/src/: connection.rs  email.rs  lib.rs  tokens.rs  user.rs
lib/utils/: Cargo.toml  README.md
lib/utils/src/: jwt.rs  lib.rs  password.rs  snowflake.rs
platform/: README.md
platform/api/: Cargo.toml  README.md
platform/api/src/: main.rs
platform/api/src/middleware/: auth.rs
platform/api/src/routes/: account.rs
platform/couch/: README.md
platform/hopper/: README.md
platform/omniscience/: Cargo.toml
web/: package.json  tailwind.config.js  vite.config.ts
web/src/: app.css
web/src/lib/caller/: account.ts  apiRequest.ts
web/src/lib/components/apps/: AppIcon.svelte
web/src/lib/components/input/: Button.svelte  EmailInput.svelte  NumberInput.svelte  PasswordInput.svelte  Tabs.svelte  TextInput.svelte
web/src/lib/components/misc/: Error.svelte  Loader.svelte
web/src/lib/context/: context.ts
web/src/lib/utils/: constants.ts  types.ts
web/src/routes/: +page.svelte
web/src/routes/app/: +layout.svelte  +page.svelte
web/src/routes/app/launch/: +page.svelte
web/src/routes/app/launch/[appId]/: +page.svelte
web/src/routes/app/login/: +page.svelte
