[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
axum.workspace = true
serde.workspace = true
hmac.workspace = true
sha2.workspace = true
jwt.workspace = true