[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database.workspace = true
utils.workspace = true
sqlx.workspace = true
axum.workspace = true
serde.workspace = true
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
uuid.workspace = true
tower-http = {version = "0.4.1", features = ["trace", "cors"] }
dotenv = "0.15.0"
rand = "0.8.5"
reqwest.workspace = true
bitfield-struct.workspace = true
axum-extra = { version = "0.8.0", features = ["cookie"] }
